<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titreEcran_listeMission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titreEcran_listeMission"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/titreEcran_numMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreEcran_numMission" />

    <!-- liste -->
    <ListView
        android:id="@+id/numMission"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.41" >
    </ListView>

    <Button
        android:id="@+id/btn_DetailMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_DetailMission" />
</LinearLayout>